--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.16.2",
     "@mui/material": "^5.16.2",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "popper.js": "^1.16.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
