--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.16.2",
     "@mui/material": "^5.16.2",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.167.0",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "popper.js": "^1.16.1",
     "react": "^18",
     "react-dom": "^18",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "three": "^0.167.0"
   },
   "devDependencies": {
     "@types/node": "^20",
